@@ -5,6 +5,7 @@ Sigil-pre0.9.10
     - Fixed lack of recognition of woff2 fonts inside Sigil and for plugins
     - Fix segfault when .xml is first file in BookBrowser and add new html or split at cursor is invoked
     - Fix bug that allowed multiple audio/video tabas of the same resource to be opened
+    - Fix plugin related bug when adding/removing last xhtml file
 
    New Features
     - allow plugins to supply their own icon (plugin.png 48x48) for use on the Quick Launch Toolbar icons
